# newsmanager

./: .env.example  Makefile  manage.py  pyproject.toml  readme.md  requirements.in  requirements.txt
.devcontainer/: devcontainer.json  docker-compose.local.yaml  dockerfile.local
.docker/: Dockerfile  docker-compose.local.yaml  docker-compose.yaml
newsmanager/: asgi.py  celery.py  schema.py  settings.py  urls.py  wsgi.py
newsmanager/apps/authentication/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
newsmanager/apps/authentication/fixtures/: initial_data.json  test_data.json
newsmanager/apps/authentication/migrations/: 0001_initial.py  0002_loaddata_fixtures.py
newsmanager/apps/common/: models.py  utils.py
newsmanager/apps/news/: admin.py  models.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  views.py
newsmanager/apps/news/fixtures/: initial_data.json  test_data.json
newsmanager/apps/news/migrations/: 0001_initial.py  0002_newspost_status.py
newsmanager/apps/plan/: models.py
newsmanager/apps/plan/fixtures/: initial_data.json  test_data.json
newsmanager/apps/plan/migrations/: 0001_initial.py  0002_plan_name.py
